# lyrics_cloud

./: .gitignore  .pre-commit-config.yaml  README.md  README.template.md  main.py  pyproject.toml
lyrics_cloud/: __init__.py  artists_lyrics.py  content_based_recommender.py  utils.py  word_cloud.py
script/: generate_readme.py
