[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lyrics_cloud"
version = "0.1.0"
description = "Trying things with music lyrics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lyricsgenius",
    "tqdm",
]

[project.optional-dependencies]
readme = ["docdocdoc"]
pre-commit = ["pre-commit"]

[tool.isort]
profile = "black"
