[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lyrics_cloud"
version = "0.1.0"
description = "Trying things with music lyrics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gensim",
    "lyricsgenius",
    "nltk",
    "pandas",
    "plotly",
    "scikit-learn",
    "scipy==1.10.1",
    "tqdm",
    "wordcloud",
]

[project.optional-dependencies]
readme = ["docdocdoc"]
pre-commit = ["pre-commit"]

[tool.isort]
profile = "black"
